--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-<title>STATFORD SYSTEMS</title>
+<title>Главная</title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="css/reset.css" type="text/css" media="all">
 <link rel="stylesheet" href="css/layout.css" type="text/css" media="all">
@@ -23,12 +23,12 @@
 <!-- header -->
 	<header>
 		<div class="wrapper">
-			<h1><a href="index.html" id="logo">STATFORD SYSTEMS</a></h1>
+			<h1><a href="index.html" id="logo">Statford Systems</a></h1>
 			<nav>
 				<ul id="menu">
 					<li id="menu_active"><a href="index.html">Главная</a></li>
 					<li><a href="About.html">О нас</a></li>
-					<li><a href="Services.html">Сервис</a></li>
+					<li><a href="Services.html">Услуги</a></li>
 					<li><a href="Projects.html">Проекты</a></li>
 					<li><a href="Contacts.html">Контакты</a></li>
 				</ul>
@@ -36,10 +36,8 @@
 		</div>
 		<div id="banner">
 			<div class="text">
-				<article>
-				<h1>Surfing, Sharing, Shopping <span>Fast and safe</span></h1>
+				<h1>Surfing, Sharing, Shopping <span>Fast and Secure</span></h1>
 				<a href="#" class="button">Узнать больше</a>
-				</article>
 			</div>
 		</div>
 	</header>
@@ -50,41 +48,37 @@
 			<div class="wrapper">
 				<h2>Services</h2>
 				<ul class="list1 cols  pad_left2">
-					<li><a href="#">At vero eos et accusamus </a></li>
-					<li><a href="#">Dignissimos ducimus</a></li>
-					<li class="bg_none"><a href="#">Blanditiis prae sentium </a></li>
+					<li><a href="#">Интернет-канал до 500Mbps</a></li>
+					<li><a href="#">Аренда оборудования</a></li>
+					<li class="bg_none"><a href="#">VPN</a></li>
 				</ul>
 				<ul class="list1 cols  pad_left2">
-					<li><a href="#">Volupt atum deleniti atque </a></li>
-					<li><a href="#">Corrupti quos dolres</a></li>
-					<li class="bg_none"><a href="#">Quas molestias exceturi </a></li>
-				</ul>
-				<ul class="list1 cols  pad_left2">
-					<li><a href="#">Sint occaecati cupiditate </a></li>
-					<li><a href="#">Provident similique </a></li>
-					<li class="bg_none"><a href="#">Auntin culpa qui officia</a></li>
+					<li><a href="#">VoIP</a></li>
+					<li><a href="#">Выделение белого IP-адреса</a></li>
+					<li class="bg_none"><a href="#">Проектирование и монтаж ЛВС</a></li>
 				</ul>
 			</div>
 		</div>
 		<div class="wrapper">
 			<article class="col1 pad_left1">
 				<h2>Recent News</h2>
-				<p><span class="color1">26.11.2010</span> <br><a href="#" class="link1">Vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum.</a></p>
-				<p><span class="color1">09.11.2010</span><br><a href="#" class="link1">Deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</a></p>
-				<p><span class="color1">02.11.2010</span><br><a href="#" class="link1">Similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</a></p>
-				<p><a href="#">News Archive</a></p>
+				<p><span class="color1">26.05.2023</span> <br><a href="#" class="link1"><b>Новое партнерство:</b> Мы рады объявить о партнерстве с ведущими поставщиками сетевых технологий, чтобы предложить клиентам еще более передовые и надежные решения для связи.</a></p>
+				<p><span class="color1">09.08.2023</span><br><a href="#" class="link1"><b>Расширение области обслуживания:</b> Теперь мы покрываем новые регионы, обеспечивая больше предприятий быстрым доступом к интернету для их роста и развития.</a></p>
+				<p><span class="color1">02.10.2023</span><br><a href="#" class="link1"><b>Инновационные решения безопасности:</b> Мы внедряем новейшие технологии безопасности, гарантируя защиту данных наших клиентов при использовании наших услуг подключения к интернету.</a></p>
+				<p><a href="#">Архив новостей</a></p>
 			</article>
 			<article class="col2 pad_left1">
-				<h2>Welcome to Global Connect! <span>Nam libero tempore, cum soluta nobis est eligendi optio cumque</span></h2>
-				<p class="pad_bot2">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis <a href="#">voluptas assumenda</a> est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates.</p>
+				<h2>Welcome to Statford Systems!</h2>
+				<p class="pad_bot2"><b>Добро пожаловать в компанию, где возможности бизнеса расширяются вместе с нами!</b></p>
+				<p class="pad_bot2">Мы - профессиональная команда, специализирующаяся на подключении предприятий к надежному и быстрому интернету. Наше миссия - обеспечить ваш бизнес стабильным и высокоскоростным интернет-подключением, удовлетворяя самые требовательные потребности. Надежность, скорость и безопасность - это то, что мы предлагаем для вашего успеха. Доверьтесь нам, и мы поможем вашему предприятию достичь новых высот в онлайн-мире.</p>
 				<div class="line1 wrapper">
 					<article class="cols">
 						<figure><img src="images/page1_img1.jpg" alt="" class="pad_bot1"></figure>
-						Nam libero tempore cumoluta nobis est eligendi optio cumque impedit quo minus id quod maxime.
+						Мы - ведущая компания в сфере подключения предприятий к высокоскоростному интернету. Наша основная задача заключается в обеспечении надежного и быстрого интернет-подключения для предприятий всех масштабов. Мы предлагаем широкий спектр услуг, нацеленных на обеспечение высокой производительности вашего бизнеса через стабильное онлайн-присутствие. Наша компания стремится к инновационным решениям, гибким планам тарификации и высокому уровню технической поддержки, чтобы обеспечить нашим клиентам самый современный опыт в области связи и интернет-технологий.
 					</article>
 					<article class="cols right">
 						<figure><img src="images/page1_img2.jpg" alt="" class="pad_bot1"></figure>
-						Placeat facere possimus voluptas assumeda omnis dolor repellendus emporibus autem.
+						Мы специализируемся на обеспечении бизнесов надежным и высокоскоростным интернет-подключением. Наша компания ориентирована на удовлетворение потребностей предприятий в быстрой и стабильной связи. Мы предлагаем клиентам современные технологии подключения, персонализированные решения и техническую поддержку на высшем уровне. Наша цель - помочь предприятиям эффективно использовать возможности онлайн-мира, обеспечивая надежные инструменты для успешного развития бизнеса в цифровой эпохе.
 					</article>
 				</div>
 			</article>
@@ -93,8 +87,7 @@
 <!-- content end-->
 <!-- footer -->
 	<footer>
-		Website template designed by <a href="http://www.templatemonster.com/" target="_blank" rel="nofollow">www.templatemonster.com</a><br>
-		3D Models provided by <a href="http://www.templates.com/product/3d-models/" target="_blank" rel="nofollow">www.templates.com</a>
+		Designed by <a href="http://www.antixaker.ru/" target="_blank" rel="nofollow">www.antixaker.ru</a><br>
 	</footer>
 <!-- footer end-->
 </div>
