--- a/Projects.html
+++ b/Projects.html
@@ -72,7 +72,7 @@
 <!-- content end-->
 <!-- footer -->
 	<footer>
-		Designed by <a href="http://www.antixaker.ru/" target="_blank" rel="nofollow">www.antixaker.ru</a><br>
+		Designed by <a href="http://www.sofffa.ru/" target="_blank" rel="nofollow">www.sofffa.ru</a><br>
 	</footer>
 <!-- footer end-->
 </div>
