--- a/About.html
+++ b/About.html
@@ -51,6 +51,7 @@
 				<p><span class="color1">02.10.2023</span><br><a href="#" class="link1"><b>Инновационные решения безопасности:</b> Мы внедряем новейшие технологии безопасности, гарантируя защиту данных наших клиентов при использовании наших услуг подключения к интернету.</a></p>
 				<p><a href="#">Архив новостей</a></p>
 			</article>
+		<article class="col2 pad_left1">
 		<h2>Contact Us</h2>
 				<div class="cols color1">
 					Country:<br>
@@ -68,6 +69,7 @@
         <p><b>Профессиональная Поддержка:</b> Наша дружелюбная команда экспертов готова помочь вам в любое время. Мы ценим каждого клиента и стремимся предоставить высококачественное обслуживание.</p>
         <p><b>Инновации и Развитие:</b> Мы постоянно следим за последними технологическими тенденциями, чтобы предоставлять вам самые передовые решения. У нас вы всегда будете на шаг впереди в цифровом мире.</p>
         <p>Присоединяйтесь к STATFORD и дайте нам возможность сделать ваш опыт использования интернета невероятно комфортным и эффективным!</p>
+		</article>
 	</section>
 <!-- content end-->
 <!-- footer -->
