--- a/About.html
+++ b/About.html
@@ -44,6 +44,7 @@
 <!-- / header -->
 <!-- content -->
 	<section id="content">
+		<div class="wrapper">
 			<article class="col1 pad_left1">
 				<h2>Recent News</h2>
 				<p><span class="color1">26.05.2023</span><br><a href="#" class="link1"><b>Новое партнерство:</b> Мы рады объявить о партнерстве с ведущими поставщиками сетевых технологий, чтобы предложить клиентам еще более передовые и надежные решения для связи.</a></p>
@@ -51,17 +52,7 @@
 				<p><span class="color1">02.10.2023</span><br><a href="#" class="link1"><b>Инновационные решения безопасности:</b> Мы внедряем новейшие технологии безопасности, гарантируя защиту данных наших клиентов при использовании наших услуг подключения к интернету.</a></p>
 				<p><a href="#">Архив новостей</a></p>
 			</article>
-		<article class="col2 pad_left1">
-		<h2>Contact Us</h2>
-				<div class="cols color1">
-					Country:<br>
-					City:<br>
-					Telephone:<br>
-					E-mail:</div>
-				Республика Казахстан<br>
-				Алматы<br>
-				+7 700 900 7799<br>
-				<a href="mailto:">mail@statford-systems.kz</a>
+			<article class="col2 pad_left1">
 				<p>Мы - команда профессионалов, которая стремится обеспечить вас высокоскоростным и надежным интернетом. Наша миссия – создание современной цифровой среды, где каждый клиент может свободно и комфортно использовать возможности интернета.</p>
 				<p>Почему STATFORD – лучший выбор для ваших потребностей в интернете?</p>
         <p><b>Скорость и Надежность:</b> Мы предоставляем выдающуюся скорость передачи данных и гарантируем стабильное подключение 24/7. Работаем для вас, чтобы вы могли без замедлений наслаждаться всеми преимуществами цифрового мира.</p>
@@ -69,7 +60,8 @@
         <p><b>Профессиональная Поддержка:</b> Наша дружелюбная команда экспертов готова помочь вам в любое время. Мы ценим каждого клиента и стремимся предоставить высококачественное обслуживание.</p>
         <p><b>Инновации и Развитие:</b> Мы постоянно следим за последними технологическими тенденциями, чтобы предоставлять вам самые передовые решения. У нас вы всегда будете на шаг впереди в цифровом мире.</p>
         <p>Присоединяйтесь к STATFORD и дайте нам возможность сделать ваш опыт использования интернета невероятно комфортным и эффективным!</p>
-		</article>
+			</article>
+		</div>
 	</section>
 <!-- content end-->
 <!-- footer -->
