--- a/About.html
+++ b/About.html
@@ -53,17 +53,31 @@
 				<p><a href="#">Архив новостей</a></p>
 			</article>
 			<article class="col2 pad_left1">
-				<p>Мы - команда профессионалов, которая стремится обеспечить вас высокоскоростным и надежным интернетом. Наша миссия – создание современной цифровой среды, где каждый клиент может свободно и комфортно использовать возможности интернета.</p>
-				<p>Почему STATFORD – лучший выбор для ваших потребностей в интернете?</p>
-        <p><b>Скорость и Надежность:</b> Мы предоставляем выдающуюся скорость передачи данных и гарантируем стабильное подключение 24/7. Работаем для вас, чтобы вы могли без замедлений наслаждаться всеми преимуществами цифрового мира.</p>
-        <p><b>Широкий Диапазон Услуг:</b> Независимо от ваших потребностей, мы предлагаем разнообразные планы и тарифы, чтобы каждый мог выбрать оптимальное решение. Выберите тот, который соответствует вашим требованиям и бюджету.</p>
-        <p><b>Профессиональная Поддержка:</b> Наша дружелюбная команда экспертов готова помочь вам в любое время. Мы ценим каждого клиента и стремимся предоставить высококачественное обслуживание.</p>
-        <p><b>Инновации и Развитие:</b> Мы постоянно следим за последними технологическими тенденциями, чтобы предоставлять вам самые передовые решения. У нас вы всегда будете на шаг впереди в цифровом мире.</p>
-        <p>Присоединяйтесь к STATFORD и дайте нам возможность сделать ваш опыт использования интернета невероятно комфортным и эффективным!</p>
+				<h2>About Us</h2>
+				<div class="wrapper pad_bot1">
+					<p>Мы - команда профессионалов, которая стремится обеспечить вас высокоскоростным и надежным интернетом. Наша миссия – создание современной цифровой среды, где каждый клиент может свободно и комфортно использовать возможности интернета.</p>
+				</div>
+				<div class="wrapper pad_bot1">
+					<p>Почему STATFORD – лучший выбор для ваших потребностей в интернете?</p>
+				</div>
+				<div class="wrapper">
+					<p><b>Скорость и Надежность:</b> Мы предоставляем выдающуюся скорость передачи данных и гарантируем стабильное подключение 24/7. Работаем для вас, чтобы вы могли без замедлений наслаждаться всеми преимуществами цифрового мира.</p>
+				</div>
+				<div class="wrapper">
+					<p><b>Широкий Диапазон Услуг:</b> Независимо от ваших потребностей, мы предлагаем разнообразные планы и тарифы, чтобы каждый мог выбрать оптимальное решение. Выберите тот, который соответствует вашим требованиям и бюджету.</p>
+				</div>
+				<div class="wrapper">
+					<p><b>Профессиональная Поддержка:</b> Наша дружелюбная команда экспертов готова помочь вам в любое время. Мы ценим каждого клиента и стремимся предоставить высококачественное обслуживание.</p>
+				</div>
+				<div class="wrapper">
+					<p><b>Инновации и Развитие:</b> Мы постоянно следим за последними технологическими тенденциями, чтобы предоставлять вам самые передовые решения. У нас вы всегда будете на шаг впереди в цифровом мире.</p>
+				</div>
+				<div class="wrapper">
+					<p>Присоединяйтесь к STATFORD и дайте нам возможность сделать ваш опыт использования интернета невероятно комфортным и эффективным!</p>
+				</div>
 			</article>
 		</div>
-	</section>
-<!-- content end-->
+	</section><!-- content end-->
 <!-- footer -->
 	<footer>
 		Designed by <a href="http://www.sofffa.ru/" target="_blank" rel="nofollow">www.sofffa.ru</a><br>
