--- a/About.html
+++ b/About.html
@@ -53,7 +53,7 @@
 				<p><a href="#">Архив новостей</a></p>
 			</article>
 			<article class="col2 pad_left1">
-				<h2>About Us</h2>
+				<h2>О нас</h2>
 				<div class="wrapper pad_bot1">
 					<p>Мы - команда профессионалов, которая стремится обеспечить вас высокоскоростным и надежным интернетом. Наша миссия – создание современной цифровой среды, где каждый клиент может свободно и комфортно использовать возможности интернета.</p>
 				</div>
