--- a/About.html
+++ b/About.html
@@ -80,7 +80,7 @@
 	</section><!-- content end-->
 <!-- footer -->
 	<footer>
-		Designed by <a href="http://www.sofffa.ru/" target="_blank" rel="nofollow">www.sofffa.ru</a><br>
+		Designed by <a href="http://www.sofffa.ru/" target="_blank" rel="nofollow">www.iolloi.icu</a><br>
 	</footer>
 <!-- footer end-->
 </div>
