--- a/Contacts.html
+++ b/Contacts.html
@@ -83,7 +83,7 @@
 <!-- content end-->
 <!-- footer -->
 	<footer>
-		Designed by <a href="http://www.sofffa.ru/" target="_blank" rel="nofollow">www.iolloi.icu</a><br>
+		Designed by <a href="http://www.iolloi.icu/" target="_blank" rel="nofollow">www.iolloi.icu</a><br>
 	</footer>
 <!-- footer end-->
 </div>
