--- a/Services.html
+++ b/Services.html
@@ -78,7 +78,7 @@
 <!-- content end-->
 <!-- footer -->
 	<footer>
-		Designed by <a href="https://www.iolloi.icu/" target="_blank" rel="nofollow">www.iolloi.icu</a><br>
+		Designed by <a href="https://iolloi.icu/" target="_blank" rel="nofollow">www.iolloi.icu</a><br>
 	</footer>
 <!-- footer end-->
 </div>
